[project]
name = "timeplus-agent-communication"
version = "0.1.0"
description = "a demo app show how timeplus can be use in agent communication"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "autogen-core==0.5.7",
    "autogen-ext==0.5.7",
    "chess>=1.11.2",
    "fastapi>=0.115.12",
    "openai>=1.82.1",
    "pyyaml>=6.0.2",
    "tiktoken>=0.9.0",
    "timeplus-messaging>=0.0.3",
    "uvicorn[standard]>=0.34.2",
]
