[project]
name = "realtime-video-roboflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.3",
    "inference>=0.47.0",
    "jinja2>=3.1.6",
    "opencv-python>=4.10.0.84",
    "proton-driver>=0.2.13",
    "python-multipart>=0.0.20",
    "uvicorn>=0.34.2",
]
